--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@
     font-size: 50px;
 }
 .card{
-    background:
+    border: 2px solid #FFC300;
 }
 .aboutphoto{
     width:200px;
     height:200px;
     margin-right: 20px;
     float:left;
+    border:2px solid #FFC300;
 }
 
 .img-fluid{
