--- a/style.css
+++ b/style.css
@@ -33,3 +33,11 @@ label{
  }
 
  
+ @media screen and (max-width:640px){
+    .nav-item{
+width: 100%;
+margin-left: 250%;
+text-align: center;
+         
+     }
+  
