portfolio mod= psychic game

--- a/style.css
+++ b/style.css
@@ -14,13 +14,11 @@
     border:2px solid #FFC300;
 }
 
-.img-fluid{
+img{
 
     border: 2px solid #FFC300;
-    width:200px;
-    height:200px;
+   
 }
-
 label{
     font-family: 'Permanent Marker', cursive;
     background:#FFC300;
